<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.falca</groupId>
	<artifactId>vacation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>vacation</name>
	<description>Booking for vacations plans</description>

	<properties>
		<java.version>21</java.version>
	</properties>

	<modules>
		<module>vacation-common</module>
		<module>vacation-auth</module>
		<module>vacation-core</module>
		<module>vacation-gateway</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.falca</groupId>
				<artifactId>vacation-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.falca</groupId>
				<artifactId>vacation-auth</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.falca</groupId>
				<artifactId>vacation-core</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
					<source>21</source>
					<target>21</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Duser.timezone=Asia/Kolkata</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
